--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Descarga mi CV en formato PDF</h2>
-                <a href="https://www.dropbox.com/s/fszdjddtrqqomjw/CV_Javier_Ramirez.pdf?dl=0" class="btn btn-default btn-xl sr-button">Descargar</a>
+                <a href="https://www.dropbox.com/s/fszdjddtrqqomjw/CV_Javier_Ramirez.pdf?dl=0" target="_blank" class="btn btn-default btn-xl sr-button">Descargar</a>
             </div>
         </div>
     </aside>
