--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
         </div>
     </section>
 
+    <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Portafolio</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
@@ -267,7 +276,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <p>La mayoría de los sitios están diseñador por <a href="#">María Luisa</a>, desarrollador por mi para la agencia digital <a href="http://www.enexum.com/" target="_blank">enexum</a>. </p>
+                    <p>La mayoría de los sitios están diseñador por <a href="#">María Luisa</a>, desarrollados por mi para la agencia digital <a href="http://www.enexum.com/" target="_blank">enexum</a>. </p>
                 </div>
             </div>
         </div>
