--- a/index.html
+++ b/index.html
@@ -150,6 +150,51 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.cuplovers.cl/" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/9.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Cup Lovers
+                                </div>
+                                <div class="project-name">
+                                    Prestashop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.ubikemotos.cl/" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/7.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Ubike Motos
+                                </div>
+                                <div class="project-name">
+                                    Prestashop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.mtnworks.cl/" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/8.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Mountain Works
+                                </div>
+                                <div class="project-name">
+                                    Prestashop
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
                     <a href="http://www.spazziomuebles.cl/" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -225,15 +270,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.kupfer.cl/" target="_blank" class="portfolio-box">
+                    <a href="http://www.patagoniavirgin.com/" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Kupfer
+                                    Patagonia Virgin
                                 </div>
                                 <div class="project-name">
-                                    Megento
+                                    Wordpress
                                 </div>
                             </div>
                         </div>
