--- a/index.html
+++ b/index.html
@@ -288,14 +288,14 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <!-- <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Descarga mi CV en formato PDF</h2>
                 <a href="https://www.dropbox.com/s/fszdjddtrqqomjw/CV_Javier_Ramirez.pdf?dl=0" target="_blank" class="btn btn-default btn-xl sr-button">Descargar</a>
             </div>
         </div>
-    </aside>
+    </aside>-->
 
     <section id="contact">
         <div class="container">
