--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                         <a class="page-scroll" href="#about">Sobre mi</a>
                     </li>
                     <li>
+                        <a href="sophy.html">Sophy</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#skills">Skills</a>
                     </li>
                     <li>
