--- a/sophy.html
+++ b/sophy.html
@@ -4,12 +4,54 @@
 <head>
 
    <title>Javier's top rated The Simpsons episodies</title>
+   <link rel="stylesheet" href="css/sofi.css">
+<link rel="stylesheet" href="css/nubes.css">
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+
 
 </head>
 
 <body>
 
-    <h1>Hello world!</h1>
+    <div id="background-wrap">
+
+	    <div class="x x1">
+	        <div class="cloud"></div>
+	    </div>
+
+	    <div class="x x2">
+	        <div class="cloud"></div>
+	    </div>
+
+	    <div class="x x3">
+	        <div class="cloud"></div>
+	    </div>
+
+	    <div class="x x4">
+	        <div class="cloud"></div>
+	    </div>
+
+	    <div class="x x5">
+	        <div class="cloud"></div>
+	    </div>
+	</div>
+
+	<header>
+		<img src="img/simpsons.png" width="400" alt="">
+		<h1 class="simpsonsFont">My top 10 favorite Simpsons episodes for my friend Sophia Villera</h1>
+		<p>Hi! This is my top 10 episode of the Simpsons, made especially for my friend Sophia. She is a great friend whom I love very much, she is born and raised in the USA, lives in Los Angeles CA and travels every day to Providencia, Santiago, Chile to go to work ... It is for this reason that everything is in English (translated by Google).</p>
+
+		<p>Sophy, I did not choose the episodes, just look for a top 10 and modify something, since choosing 10 chapters would be impossible. There are many!!.
+
+		<p>All episodes will have a summary and a comment from me (in taco language) since that is my native language.</p>
+	</header>
+
+	<div id="app">
+	  {{ message }}
+	</div>
+
+
+	<script src="js/sofi.js"></script>
 
 </body>
 
