--- a/sophy.html
+++ b/sophy.html
@@ -41,9 +41,9 @@
 		<h1 class="simpsonsFont">My top 10 favorite Simpsons episodes for my friend Sophia Villera</h1>
 		<p>Hi! This is my top 10 episode of the Simpsons, made especially for my friend Sophia. She is a great friend whom I love very much, she is born and raised in the USA, lives in Los Angeles CA and travels every day to Providencia, Santiago, Chile to go to work ... It is for this reason that everything is in English (translated by Google).</p>
 
-		<p>Sophy, I did not choose the episodes, just look for a top 10 and modify something, since choosing 10 chapters would be impossible. There are many!!.
+		<p>Sophy, I did not choose the episodes, just look for a top 10* and modify something, since choosing 10 chapters would be impossible. There are many!!.
 
-		<p>All episodes will have a summary and a comment from me (in taco language) since that is my native language.</p>
+		<p>*Are more...</p>
 	</header>
 
 	<div id="app">
@@ -55,17 +55,79 @@
 	  		<img :src="epi.img" style="max-width: 140px;" alt="">
 	  	</div>
 	  	<div class="info">
-	  		<h4 class="simpsonsFont">{{epi.title}}</h4>
+	  		<h4 class="simpsonsFont"><a :href="epi.link">{{epi.title}}</a></h4>
 	  		<p><small>IMDb Rate: {{epi.rate}}</small></p>
 			<p>{{epi.description}}</p>
-			<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" :ratingName="ratingname" fullStarImg="https://1.bp.blogspot.com/-SkJnv3SoIYo/WCjmIOjlSoI/AAAAAAAAAD4/Zj3kATWlvBU4i4NOceqE4NKOn-OJtUPBwCLcB/s1600/4.png" emptyStarImg="https://4.bp.blogspot.com/-5ZXWRxL-mjI/WCjl001_sVI/AAAAAAAAADo/exjKyHG7e7Yl1zpmLnDJ1-7F4RNG2Qc3gCLcB/s1600/0.png" hoverStarImg="https://4.bp.blogspot.com/-5hpGJU6MxNc/WCjmLCNZ4WI/AAAAAAAAAD8/4BNKi460d9c9PID7MCPgTIpMt2wJO5W7QCLcB/s1600/5.png" numberOfStars="10" starSize="30" textSize="13" textColor="#ffffff" fontFamily="Arial, Helvetica, sans-serif" align="left" topText="Rating:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Graziaz por votar Sophie" blockingText="Ya votaste po lagi, tu voto es de $userRating$." status="active" async src="js/StarRatingSystem.js"></script>
+			<div :id="epi.ratingname"></div>
 	  	</div>
 	  	
 	  </article>
 	</div>
 
 
+	<div class="rating uno">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="uno" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating dos">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="dos" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating tres">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="tres" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating cuatro">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="cuatro" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating cinco">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="cinco" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating seis">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="seis" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating siete">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="siete" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating ocho">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="ocho" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating nueve">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="nueve" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating diez">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="diez" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating once">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="once" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating doce">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="doce" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+	<div class="rating trece">
+		<script firebaseURL="https://starratingsystem-d1912.firebaseio.com/" ratingName="trece" fullStarImg="https://3.bp.blogspot.com/-QSNdWP4Ijx4/Wsjf7QOUZ4I/AAAAAAAAAJ8/F2nReVG5WfA1rLV3dGcAFMsPOnIQck4YwCLcBGAs/s1600/pelna.png" emptyStarImg="https://1.bp.blogspot.com/-pOr9XGwtSJc/Wsjf8ULOIqI/AAAAAAAAAKE/KBh-LUDIn0YzASKf-t7mQo8UNpdHhr2SgCLcBGAs/s1600/pusta.png" hoverStarImg="https://2.bp.blogspot.com/-RBgidB2Udbw/Wsjf7XxAJqI/AAAAAAAAAJ0/arOCBC7u9gsPPnEB4GBmqxCxmmIEBITdQCLcBGAs/s1600/najech.png" numberOfStars="5" starSize="30" textSize="15" textColor="#fff" fontFamily="Georgia, serif" align="left" topText="Sophinometro:" bottomText="Average: $average$ / $max$ ($votes$ votes)" thankYouText="Thanks for voting" blockingText="ya votaste, lagi! tu voto es $userRating$." status="active" async src="https://drive.google.com/uc?export=download&id=1_3EXmeXQzNkbuQ369vV4li-eLN1mGcOV"></script>
+	</div>
+
+
+	<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+
 	<script src="js/sofi.js"></script>
+
+	<script>
+		
+	</script>
 
 </body>
 
