se actualizan proyectos

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="row no-gutter popup-gallery">
 
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://www.ubikemotos.cl/" target="_blank" class="portfolio-box">
+                    <a href="https://catalogo.movistar.cl" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/movistar.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -158,7 +158,39 @@
                                     Catalogo Movistar
                                 </div>
                                 <div class="project-name">
-                                    Magento
+                                    Magento + Vuejs
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://www.tekpro.cl" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/tekpro.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Tekpro
+                                </div>
+                                <div class="project-name">
+                                    Wordpress + JS6
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-4 col-sm-6">
+                    <a href="https://www.volkanica.cl" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/volkanica.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Volkanica
+                                </div>
+                                <div class="project-name">
+                                    Magento + JS6
                                 </div>
                             </div>
                         </div>
