--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
     </section>
 
-    <section id="services">
+    <section id="skills">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -145,7 +145,7 @@
             </div>
         </div>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="portafolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
 
