--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Sobre mi</h2>
                     <hr class="light">
-                    <p class="text-faded">Tengo 10 años de experiencia en desarrollo, he pasado por todos los sabores de CMS, frameworks y librerías para front, Actualmente estoy trabajando con React y NextJS para proyectos personales.</p>
+                    <p class="text-faded">Tengo 10 años de experiencia en desarrollo, he pasado por todos los sabores de CMS, frameworks y librerías para front, Actualmente estoy trabajando con React y NextJS para proyectos personales y Magento 2 Enterprise + Vuejs para el catalogo online de Movistar.cl</p>
                      <p class="text-faded">Tengo varios TOCs que me hacen ser responsable y ridículamente ordenado. Estoy enamorado de JavaScript y pretendo volverme un sensei en esta disciplina. 🙏 </p>
         
                 </div>
@@ -269,7 +269,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>+56 9 6425 0522</p>
+                    <p><a href="tel:56964250522">+56 9 6425 0522</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
