se agregan tec skill

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/creative.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -131,6 +131,25 @@
                         <h3>Pasión</h3>
                         <p class="text-muted">Amo lo que hago. Cada vez que hay algo que no puedo hacer, es cuando se pone divertida la cosa.</p>
                     </div>
+                </div>
+            </div>
+            <div class="row" style="margin-top: 50px;">
+                <div class="col-md-12 text-center">
+                    
+                    <h3>Technology Skills</h3>
+                    <hr>
+                    <ul class="tec">
+                        <li>React</li>
+                        <li>JS6</li>
+                        <li>NextJS</li>
+                        <li>VueJS</li>
+                        <li>Sass/Less</li>
+                        <li>React Hooks</li>
+                        <li>WebComponents</li>
+                        <li>Git</li>
+                        <li>Magento</li>
+                        <li>Scrum</li>
+                    </ul>
                 </div>
             </div>
         </div>
