se agrega redux

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                     <ul class="tec">
                         <li>React</li>
                         <li>JS6</li>
+                        <li>Redux</li>
                         <li>NextJS</li>
                         <li>VueJS</li>
                         <li>Sass/Less</li>
